Implement property wiping button in popup

--- a/sshplus.html
+++ b/sshplus.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
 
-<body style="background-color: #f65d21;">
+<head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
     <img src="sshplus.png">
+    <div id="settings">
+        <button id="reset-property">Clear seen properties</button>
+    </div>
 </body>
+<script src="scripts/popup.js"></script>
 
 </html>
