--- a/sshplus.html
+++ b/sshplus.html
@@ -11,6 +11,6 @@
         <button id="reset-property">Clear seen properties</button>
     </div>
 </body>
-<script src="scripts/popup.js"></script>
+<script src="scripts/onSSHChecker.js"></script>
 
 </html>
