--- a/sshplus.html
+++ b/sshplus.html
@@ -41,6 +41,7 @@
         </div>
     </div>
 </body>
+<script src="scripts/popup/reloader.js" type="module"></script>
 <script src="scripts/popup/onSSHChecker.js" type="module"></script>
 <script src="scripts/popup/cityFilter.js" type="module"></script>
 <script src="scripts/popup/propertyResetter.js" type="module"></script>
