Implement Dropdown class

--- a/sshplus.html
+++ b/sshplus.html
@@ -17,7 +17,7 @@
     <div id="settings">
         <button id="reset-property">Clear seen properties</button>
         <h2 id="city-filter-heading" style="margin-bottom: 0px;">
-            <span class="material-symbols-rounded" id="city-filter-arrow">arrow_drop_down</span>
+            <span class="material-symbols-rounded arrow" id="city-filter-arrow">arrow_drop_down</span>
             City Filter
         </h2>
         <div id="city-filter-container">
@@ -47,7 +47,7 @@
             </div>
         </div>
         <h2 id="gender-filter-heading" style="margin-bottom: 0px;">
-            <span class="material-symbols-rounded" id="gender-filter-arrow">arrow_drop_down</span>
+            <span class="material-symbols-rounded arrow" id="gender-filter-arrow">arrow_drop_down</span>
             Gender Filter
         </h2>
         <div id="gender-filter-container">
@@ -69,6 +69,7 @@
 </body>
 <script src="scripts/popup/reloader.js" type="module"></script>
 <script src="scripts/popup/onSSHChecker.js" type="module"></script>
+<script src="scripts/popup/dropdown.js" type="module"></script>
 <script src="scripts/popup/cityFilterPopup.js" type="module"></script>
 <script src="scripts/popup/genderFilterPopup.js" type="module"></script>
 <script src="scripts/popup/propertyResetter.js" type="module"></script>
