Update filter headings with title attributes

--- a/sshplus.html
+++ b/sshplus.html
@@ -16,7 +16,8 @@
     <img id="logo" src="sshplus.png">
     <div id="settings">
         <button id="reset-property">Clear seen properties</button>
-        <h2 id="city-filter-heading" style="margin-bottom: 0px;">
+        <h2 title="Filter properties based on the city they are in." id="city-filter-heading"
+            style="margin-bottom: 0px;">
             <span class="material-symbols-rounded arrow" id="city-filter-arrow">arrow_drop_down</span>
             City Filter
         </h2>
@@ -46,7 +47,8 @@
                 <label><input type="checkbox" value="Zwolle"> Zwolle</label>
             </div>
         </div>
-        <h2 id="gender-filter-heading" style="margin-bottom: 0px;">
+        <h2 title="Add a warning when viewing a room that isn't looking for your gender." id="gender-filter-heading"
+            style="margin-bottom: 0px;">
             <span class="material-symbols-rounded arrow" id="gender-filter-arrow">arrow_drop_down</span>
             Gender Filter
         </h2>
