--- a/sshplus.html
+++ b/sshplus.html
@@ -16,7 +16,7 @@
     <img id="logo" src="sshplus.png">
     <div id="settings">
         <button id="reset-property">Clear seen properties</button>
-        <h2 title="Filter properties based on the city they are in." id="city-filter-heading"
+        <h2 title="Filter properties based on the city they are in." id="city-filter-header"
             style="margin-bottom: 0px;">
             <span class="material-symbols-rounded arrow" id="city-filter-arrow">arrow_drop_down</span>
             City Filter
@@ -47,7 +47,7 @@
                 <label><input type="checkbox" value="Zwolle"> Zwolle</label>
             </div>
         </div>
-        <h2 title="Add a warning when viewing a room that isn't looking for your gender." id="gender-filter-heading"
+        <h2 title="Add a warning when viewing a room that isn't looking for your gender." id="gender-filter-header"
             style="margin-bottom: 0px;">
             <span class="material-symbols-rounded arrow" id="gender-filter-arrow">arrow_drop_down</span>
             Gender Filter
@@ -68,12 +68,25 @@
                 <label><input type="checkbox" value="No preference"> No preference</label>
             </div>
         </div>
+        <h2 id="date-sorter-header" style="margin-bottom: 0px;">
+            <span class="material-symbols-rounded arrow" id="date-sorter-arrow">arrow_drop_down</span>
+            Date Sorter
+        </h2>
+        <div id="date-sorter-container">
+            <label for="date-sorter-mode">Sort mode:</label>
+            <select id="date-sorter-mode">
+                <option value="ascending">Ascending</option>
+                <option value="default">Default</option>
+                <option value="descending">Descending</option>
+            </select>
+        </div>
 </body>
 <script src="scripts/popup/reloader.js" type="module"></script>
 <script src="scripts/popup/onSSHChecker.js" type="module"></script>
 <script src="scripts/popup/dropdown.js" type="module"></script>
 <script src="scripts/popup/cityFilterPopup.js" type="module"></script>
 <script src="scripts/popup/genderFilterPopup.js" type="module"></script>
+<script src="scripts/popup/dateSorterPopup.js" type="module"></script>
 <script src="scripts/popup/propertyResetter.js" type="module"></script>
 <script src="scripts/popup/popup.js" type="module"></script>
 
