--- a/sshplus.html
+++ b/sshplus.html
@@ -88,6 +88,9 @@
         <div id="other-settings-container">
             <label><input title="Hide the purple consolation card on the long stay page." type="checkbox"
                     id="hide-consolation-card"> Hide Consolation Card</label>
+            <br>
+            <label><input title="Hide properties that you have already seen" type="checkbox" id="hide-seen-properties">
+                Hide Seen Properties</label>
         </div>
 </body>
 <script src="scripts/popup/reloader.js" type="module"></script>
@@ -98,6 +101,7 @@
 <script src="scripts/popup/dateSorterPopup.js" type="module"></script>
 <script src="scripts/popup/propertyResetter.js" type="module"></script>
 <script src="scripts/popup/consolationCardHiderPopup.js" type="module"></script>
+<script src="scripts/popup/seenPropertyHiderPopup.js" type="module"></script>
 <script src="scripts/popup/otherSettingsPopup.js" type="module"></script>
 <script src="scripts/popup/popup.js" type="module"></script>
 
