Implement language override settings

--- a/sshplus.html
+++ b/sshplus.html
@@ -86,6 +86,13 @@
             <br>
             <label data-translate="hideSeenProperties" translate-title="hideSeenPropertiesTitle"><input type="checkbox"
                     id="hide-seen-properties"></label>
+            <br>
+            <label data-translate="popupLanguage" for="language-selector"></label>
+            <select id="language-selector">
+                <option data-translate="siteStandard" value="site"></option>
+                <option value="nl">Nederlands</option>
+                <option value="en">English</option>
+            </select>
         </div>
         <br>
 
@@ -102,6 +109,7 @@
 <script src="scripts/popup/propertyResetter.js" type="module"></script>
 <script src="scripts/popup/consolationCardHiderPopup.js" type="module"></script>
 <script src="scripts/popup/seenPropertyHiderPopup.js" type="module"></script>
+<script src="scripts/popup/languageSettings.js" type="module"></script>
 <script src="scripts/popup/otherSettingsPopup.js" type="module"></script>
 <script src="scripts/popup/popup.js" type="module"></script>
 
