Update add language-dependent site links to SSH+ logo in popup

--- a/sshplus.html
+++ b/sshplus.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <img id="logo" src="sshplus.png">
+    <a href-translate="siteLink" target="_blank"><img id="logo" src="sshplus.png"></a>
     <div id="settings">
         <h2 data-translate="cityFilter" title-translate="cityFilterTitle" id="city-filter-header">
             <span class="material-symbols-rounded arrow" id="city-filter-arrow">arrow_drop_down</span>
